kubernetes/application/dashboard-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-api-deployment
  labels:
    app: dashboard-api
    environment: production
  namespace: application-namespace
  annotations:
    checkov.io/skip1: CKV_K8S_43=I will add commits when I apply the aws infrastructure
    checkov.io/skip2: CKV_K8S_14=I will add commits when I apply the aws infrastructure
    checkov.io/skip3: CKV_K8S_35
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: dashboard-api
  template:
    metadata:
      labels:
        app: dashboard-api
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: dashboard-api-service-account
      containers:
      - name: dashboard-api
        image: 425959969184.dkr.ecr.us-east-1.amazonaws.com/eks-project1-lab/dashboard-api:2de7e995176ebcd1bb1771a7f4efd0159a3fd7e8-37894255443-1
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 10000
          runAsGroup: 30000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8086
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 250m
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8086
          initialDelaySeconds: 130
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 20
          periodSeconds: 15
        startupProbe:
          tcpSocket:
            port: 8086
          periodSeconds: 5
          failureThreshold: 60
