kubernetes/application/dashboard-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-api-service
  namespace: application-namespace

spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    app: dashboard-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8086
      nodePort: 30086
