kubernetes/application/dashboard-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-api-ingress
  namespace: application-namespace
  annotations: 
    cert-manager.io/cluster-issuer: issuer
spec:
  tls:
  - hosts:
      - dashboard.ecommerce.example.invalid
    secretName: dashboard-ingress-tls
  rules:
  - host: "dashboard.ecommerce.example.invalid"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard-api-service
            port:
              number: 80
  ingressClassName: traefik
